[package]
name = "address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = "0.28.0"
sha2 = "0.10.8"
base58 = "0.2.0"
ethnum = "1.5.0"
k256 = "0.13.2"
bs58 = "0.5.0"
hex = "0.4"
ripemd = "0.1.3"
anyhow = "1.0.75"
arrayref = "0.3"